@@ -1,6 +1,6 @@
 /* StarPU --- Runtime system for heterogeneous multicore architectures.
  *
- * Copyright (C) 2009-2021  Université de Bordeaux, CNRS (LaBRI UMR 5800), Inria
+ * Copyright (C) 2009-2022  Université de Bordeaux, CNRS (LaBRI UMR 5800), Inria
  *
  * StarPU is free software; you can redistribute it and/or modify
  * it under the terms of the GNU Lesser General Public License as published by
@@ -111,10 +111,10 @@ int main(int argc, char **argv)
 
 	starpu_task_wait_for_all();
 	starpu_data_unregister(token_handle);
-	starpu_mpi_shutdown();
 
 	FPRINTF_MPI(stderr, "Final value for token %d\n", token);
 
+	starpu_mpi_shutdown();
 	if (!mpi_init)
 		MPI_Finalize();
 
