@@ -134,12 +134,12 @@ int main(int argc, char **argv)
 	int sdetached, rdetached;
 
 	MPI_INIT_THREAD_real(&argc, &argv, MPI_THREAD_SERIALIZED);
-	starpu_mpi_comm_rank(MPI_COMM_WORLD, &rank);
-	starpu_mpi_comm_size(MPI_COMM_WORLD, &size);
+	MPI_Comm_rank(MPI_COMM_WORLD, &rank);
+	MPI_Comm_size(MPI_COMM_WORLD, &size);
 
 	if (size < 2)
 	{
-		FPRINTF_MPI(stderr, "We need at least 2 processes.\n");
+		FPRINTF(stderr, "We need at least 2 processes.\n");
 		MPI_Finalize();
 		return rank == 0 ? STARPU_TEST_SKIPPED : 0;
 	}
